adding default primary color

--- a/snippets/templates/home/landing_page.html
+++ b/snippets/templates/home/landing_page.html
@@ -405,7 +405,7 @@
 
         <!-- CTA Section -->
         <div class="relative bg-gray-900">
-          <div class="relative h-56 bg-indigo-600 sm:h-72 md:absolute md:left-0 md:h-full md:w-1/2">
+          <div class="relative h-56 bg-primary-600 sm:h-72 md:absolute md:left-0 md:h-full md:w-1/2">
             <img class="w-full h-full object-cover" src="https://images.unsplash.com/photo-1525130413817-d45c1d127c42?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1920&q=60&sat=-100" alt="">
             <div aria-hidden="true" class="absolute inset-0 bg-gradient-to-r from-teal-500 to-cyan-600 mix-blend-multiply"></div>
           </div>
