--- a/snippets/templates/form_layouts/form2.html
+++ b/snippets/templates/form_layouts/form2.html
@@ -31,14 +31,14 @@
           <label for="username" class="block text-sm font-medium text-gray-700"> Username </label>
           <div class="mt-1 flex rounded-md shadow-sm">
             <span class="inline-flex items-center px-3 rounded-l-md border border-r-0 border-gray-300 bg-gray-50 text-gray-500 sm:text-sm"> workcation.com/ </span>
-            <input type="text" name="username" id="username" autocomplete="username" class="flex-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full min-w-0 rounded-none rounded-r-md sm:text-sm border-gray-300">
+            <input type="text" name="username" id="username" autocomplete="username" class="flex-1 focus:ring-primary-500 focus:border-primary-500 block w-full min-w-0 rounded-none rounded-r-md sm:text-sm border-gray-300">
           </div>
         </div>
 
         <div class="sm:col-span-6">
           <label for="about" class="block text-sm font-medium text-gray-700"> About </label>
           <div class="mt-1">
-            <textarea id="about" name="about" rows="3" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
+            <textarea id="about" name="about" rows="3" class="shadow-sm focus:ring-primary-500 focus:border-primary-500 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
           </div>
           <p class="mt-2 text-sm text-gray-500">Write a few sentences about yourself.</p>
         </div>
@@ -51,7 +51,7 @@
                 <path d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z" />
               </svg>
             </span>
-            <button type="button" class="ml-5 bg-white py-2 px-3 border border-gray-300 rounded-md shadow-sm text-sm leading-4 font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Change</button>
+            <button type="button" class="ml-5 bg-white py-2 px-3 border border-gray-300 rounded-md shadow-sm text-sm leading-4 font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">Change</button>
           </div>
         </div>
 
@@ -63,7 +63,7 @@
                 <path d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8m-12 4h.02" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
               </svg>
               <div class="flex text-sm text-gray-600">
-                <label for="file-upload" class="relative cursor-pointer bg-white rounded-md font-medium text-indigo-600 hover:text-indigo-500 focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500">
+                <label for="file-upload" class="relative cursor-pointer bg-white rounded-md font-medium text-primary-600 hover:text-primary-500 focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-primary-500">
                   <span>Upload a file</span>
                   <input id="file-upload" name="file-upload" type="file" class="sr-only">
                 </label>
@@ -85,28 +85,28 @@
         <div class="sm:col-span-3">
           <label for="first-name" class="block text-sm font-medium text-gray-700"> First name </label>
           <div class="mt-1">
-            <input type="text" name="first-name" id="first-name" autocomplete="given-name" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+            <input type="text" name="first-name" id="first-name" autocomplete="given-name" class="shadow-sm focus:ring-primary-500 focus:border-primary-500 block w-full sm:text-sm border-gray-300 rounded-md">
           </div>
         </div>
 
         <div class="sm:col-span-3">
           <label for="last-name" class="block text-sm font-medium text-gray-700"> Last name </label>
           <div class="mt-1">
-            <input type="text" name="last-name" id="last-name" autocomplete="family-name" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+            <input type="text" name="last-name" id="last-name" autocomplete="family-name" class="shadow-sm focus:ring-primary-500 focus:border-primary-500 block w-full sm:text-sm border-gray-300 rounded-md">
           </div>
         </div>
 
         <div class="sm:col-span-4">
           <label for="email" class="block text-sm font-medium text-gray-700"> Email address </label>
           <div class="mt-1">
-            <input id="email" name="email" type="email" autocomplete="email" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+            <input id="email" name="email" type="email" autocomplete="email" class="shadow-sm focus:ring-primary-500 focus:border-primary-500 block w-full sm:text-sm border-gray-300 rounded-md">
           </div>
         </div>
 
         <div class="sm:col-span-3">
           <label for="country" class="block text-sm font-medium text-gray-700"> Country </label>
           <div class="mt-1">
-            <select id="country" name="country" autocomplete="country-name" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+            <select id="country" name="country" autocomplete="country-name" class="shadow-sm focus:ring-primary-500 focus:border-primary-500 block w-full sm:text-sm border-gray-300 rounded-md">
               <option>United States</option>
               <option>Canada</option>
               <option>Mexico</option>
@@ -117,28 +117,28 @@
         <div class="sm:col-span-6">
           <label for="street-address" class="block text-sm font-medium text-gray-700"> Street address </label>
           <div class="mt-1">
-            <input type="text" name="street-address" id="street-address" autocomplete="street-address" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+            <input type="text" name="street-address" id="street-address" autocomplete="street-address" class="shadow-sm focus:ring-primary-500 focus:border-primary-500 block w-full sm:text-sm border-gray-300 rounded-md">
           </div>
         </div>
 
         <div class="sm:col-span-2">
           <label for="city" class="block text-sm font-medium text-gray-700"> City </label>
           <div class="mt-1">
-            <input type="text" name="city" id="city" autocomplete="address-level2" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+            <input type="text" name="city" id="city" autocomplete="address-level2" class="shadow-sm focus:ring-primary-500 focus:border-primary-500 block w-full sm:text-sm border-gray-300 rounded-md">
           </div>
         </div>
 
         <div class="sm:col-span-2">
           <label for="region" class="block text-sm font-medium text-gray-700"> State / Province </label>
           <div class="mt-1">
-            <input type="text" name="region" id="region" autocomplete="address-level1" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+            <input type="text" name="region" id="region" autocomplete="address-level1" class="shadow-sm focus:ring-primary-500 focus:border-primary-500 block w-full sm:text-sm border-gray-300 rounded-md">
           </div>
         </div>
 
         <div class="sm:col-span-2">
           <label for="postal-code" class="block text-sm font-medium text-gray-700"> ZIP / Postal code </label>
           <div class="mt-1">
-            <input type="text" name="postal-code" id="postal-code" autocomplete="postal-code" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+            <input type="text" name="postal-code" id="postal-code" autocomplete="postal-code" class="shadow-sm focus:ring-primary-500 focus:border-primary-500 block w-full sm:text-sm border-gray-300 rounded-md">
           </div>
         </div>
       </div>
@@ -155,7 +155,7 @@
           <div class="mt-4 space-y-4">
             <div class="relative flex items-start">
               <div class="flex items-center h-5">
-                <input id="comments" name="comments" type="checkbox" class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded">
+                <input id="comments" name="comments" type="checkbox" class="focus:ring-primary-500 h-4 w-4 text-primary-600 border-gray-300 rounded">
               </div>
               <div class="ml-3 text-sm">
                 <label for="comments" class="font-medium text-gray-700">Comments</label>
@@ -164,7 +164,7 @@
             </div>
             <div class="relative flex items-start">
               <div class="flex items-center h-5">
-                <input id="candidates" name="candidates" type="checkbox" class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded">
+                <input id="candidates" name="candidates" type="checkbox" class="focus:ring-primary-500 h-4 w-4 text-primary-600 border-gray-300 rounded">
               </div>
               <div class="ml-3 text-sm">
                 <label for="candidates" class="font-medium text-gray-700">Candidates</label>
@@ -173,7 +173,7 @@
             </div>
             <div class="relative flex items-start">
               <div class="flex items-center h-5">
-                <input id="offers" name="offers" type="checkbox" class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded">
+                <input id="offers" name="offers" type="checkbox" class="focus:ring-primary-500 h-4 w-4 text-primary-600 border-gray-300 rounded">
               </div>
               <div class="ml-3 text-sm">
                 <label for="offers" class="font-medium text-gray-700">Offers</label>
@@ -189,15 +189,15 @@
           </div>
           <div class="mt-4 space-y-4">
             <div class="flex items-center">
-              <input id="push-everything" name="push-notifications" type="radio" class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300">
+              <input id="push-everything" name="push-notifications" type="radio" class="focus:ring-primary-500 h-4 w-4 text-primary-600 border-gray-300">
               <label for="push-everything" class="ml-3 block text-sm font-medium text-gray-700"> Everything </label>
             </div>
             <div class="flex items-center">
-              <input id="push-email" name="push-notifications" type="radio" class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300">
+              <input id="push-email" name="push-notifications" type="radio" class="focus:ring-primary-500 h-4 w-4 text-primary-600 border-gray-300">
               <label for="push-email" class="ml-3 block text-sm font-medium text-gray-700"> Same as email </label>
             </div>
             <div class="flex items-center">
-              <input id="push-nothing" name="push-notifications" type="radio" class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300">
+              <input id="push-nothing" name="push-notifications" type="radio" class="focus:ring-primary-500 h-4 w-4 text-primary-600 border-gray-300">
               <label for="push-nothing" class="ml-3 block text-sm font-medium text-gray-700"> No push notifications </label>
             </div>
           </div>
@@ -208,8 +208,8 @@
 
   <div class="pt-5">
     <div class="flex justify-end">
-      <button type="button" class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Cancel</button>
-      <button type="submit" class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Save</button>
+      <button type="button" class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">Cancel</button>
+      <button type="submit" class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-primary-600 hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">Save</button>
     </div>
   </div>
 </form>
