adding seconday color

--- a/snippets/templates/hero_sections/hero6.html
+++ b/snippets/templates/hero_sections/hero6.html
@@ -19,10 +19,10 @@
     <svg class="absolute top-0 left-1/2 transform translate-x-64 -translate-y-8" width="640" height="784" fill="none" viewBox="0 0 640 784">
       <defs>
         <pattern id="9ebea6f4-a1f5-4d96-8c4e-4c2abf658047" x="118" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
-          <rect x="0" y="0" width="4" height="4" class="text-gray-200" fill="currentColor" />
+          <rect x="0" y="0" width="4" height="4" class="text-secondary-200" fill="currentColor" />
         </pattern>
       </defs>
-      <rect y="72" width="640" height="640" class="text-gray-50" fill="currentColor" />
+      <rect y="72" width="640" height="640" class="text-secondary-50" fill="currentColor" />
       <rect x="118" width="404" height="784" fill="url(#9ebea6f4-a1f5-4d96-8c4e-4c2abf658047)" />
     </svg>
   </div>
@@ -37,7 +37,7 @@
               <img class="h-8 w-auto sm:h-10" src="https://tailwindui.com/img/logos/workflow-mark-primary-600.svg" alt="">
             </a>
             <div class="-mr-2 flex items-center md:hidden">
-              <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primary-500" aria-expanded="false">
+              <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-secondary-400 hover:text-secondary-500 hover:bg-secondary-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primary-500" aria-expanded="false">
                 <span class="sr-only">Open main menu</span>
                 <!-- Heroicon name: outline/menu -->
                 <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -47,18 +47,18 @@
             </div>
           </div>
           <div class="hidden md:block md:ml-10 md:space-x-10">
-            <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Product</a>
+            <a href="#" class="font-medium text-secondary-500 hover:text-secondary-900">Product</a>
 
-            <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Features</a>
+            <a href="#" class="font-medium text-secondary-500 hover:text-secondary-900">Features</a>
 
-            <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Marketplace</a>
+            <a href="#" class="font-medium text-secondary-500 hover:text-secondary-900">Marketplace</a>
 
-            <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Company</a>
+            <a href="#" class="font-medium text-secondary-500 hover:text-secondary-900">Company</a>
           </div>
         </div>
         <div class="hidden md:block text-right">
           <span class="inline-flex rounded-md shadow-md ring-1 ring-black ring-opacity-5">
-            <a href="#" class="inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-primary-600 bg-white hover:bg-gray-50"> Log in </a>
+            <a href="#" class="inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-primary-600 bg-white hover:bg-secondary-50"> Log in </a>
           </span>
         </div>
       </nav>
@@ -80,7 +80,7 @@
               <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-primary-600.svg" alt="">
             </div>
             <div class="-mr-2">
-              <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primary-500">
+              <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-secondary-400 hover:text-secondary-500 hover:bg-secondary-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primary-500">
                 <span class="sr-only">Close main menu</span>
                 <!-- Heroicon name: outline/x -->
                 <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -90,15 +90,15 @@
             </div>
           </div>
           <div class="px-2 pt-2 pb-3 space-y-1">
-            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Product</a>
+            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-secondary-700 hover:text-secondary-900 hover:bg-secondary-50">Product</a>
 
-            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Features</a>
+            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-secondary-700 hover:text-secondary-900 hover:bg-secondary-50">Features</a>
 
-            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Marketplace</a>
+            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-secondary-700 hover:text-secondary-900 hover:bg-secondary-50">Marketplace</a>
 
-            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Company</a>
+            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-secondary-700 hover:text-secondary-900 hover:bg-secondary-50">Company</a>
           </div>
-          <a href="#" class="block w-full px-5 py-3 text-center font-medium text-primary-600 bg-gray-50 hover:bg-gray-100"> Log in </a>
+          <a href="#" class="block w-full px-5 py-3 text-center font-medium text-primary-600 bg-secondary-50 hover:bg-secondary-100"> Log in </a>
         </div>
       </div>
     </div>
@@ -107,23 +107,23 @@
       <div class="lg:grid lg:grid-cols-12 lg:gap-8">
         <div class="sm:text-center md:max-w-2xl md:mx-auto lg:col-span-6 lg:text-left">
           <h1>
-            <span class="block text-sm font-semibold uppercase tracking-wide text-gray-500 sm:text-base lg:text-sm xl:text-base">Coming soon</span>
+            <span class="block text-sm font-semibold uppercase tracking-wide text-secondary-500 sm:text-base lg:text-sm xl:text-base">Coming soon</span>
             <span class="mt-1 block text-4xl tracking-tight font-extrabold sm:text-5xl xl:text-6xl">
-              <span class="block text-gray-900">Data to enrich your</span>
+              <span class="block text-secondary-900">Data to enrich your</span>
               <span class="block text-primary-600">online business</span>
             </span>
           </h1>
-          <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-xl lg:text-lg xl:text-xl">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua ad ad non deserunt sunt.</p>
+          <p class="mt-3 text-base text-secondary-500 sm:mt-5 sm:text-xl lg:text-lg xl:text-xl">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua ad ad non deserunt sunt.</p>
           <div class="mt-8 sm:max-w-lg sm:mx-auto sm:text-center lg:text-left lg:mx-0">
-            <p class="text-base font-medium text-gray-900">Sign up to get notified when it’s ready.</p>
+            <p class="text-base font-medium text-secondary-900">Sign up to get notified when it’s ready.</p>
             <form action="#" method="POST" class="mt-3 sm:flex">
               <label for="email" class="sr-only">Email</label>
-              <input type="email" name="email" id="email" class="block w-full py-3 text-base rounded-md placeholder-gray-500 shadow-sm focus:ring-primary-500 focus:border-primary-500 sm:flex-1 border-gray-300" placeholder="Enter your email">
-              <button type="submit" class="mt-3 w-full px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-gray-800 shadow-sm hover:bg-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 sm:mt-0 sm:ml-3 sm:flex-shrink-0 sm:inline-flex sm:items-center sm:w-auto">Notify me</button>
+              <input type="email" name="email" id="email" class="block w-full py-3 text-base rounded-md placeholder-secondary-500 shadow-sm focus:ring-primary-500 focus:border-primary-500 sm:flex-1 border-secondary-300" placeholder="Enter your email">
+              <button type="submit" class="mt-3 w-full px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-secondary-800 shadow-sm hover:bg-secondary-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 sm:mt-0 sm:ml-3 sm:flex-shrink-0 sm:inline-flex sm:items-center sm:w-auto">Notify me</button>
             </form>
-            <p class="mt-3 text-sm text-gray-500">
+            <p class="mt-3 text-sm text-secondary-500">
               We care about the protection of your data. Read our
-              <a href="#" class="font-medium text-gray-900 underline">Privacy Policy</a>.
+              <a href="#" class="font-medium text-secondary-900 underline">Privacy Policy</a>.
             </p>
           </div>
         </div>
@@ -131,10 +131,10 @@
           <svg class="absolute top-0 left-1/2 transform -translate-x-1/2 -translate-y-8 scale-75 origin-top sm:scale-100 lg:hidden" width="640" height="784" fill="none" viewBox="0 0 640 784" aria-hidden="true">
             <defs>
               <pattern id="4f4f415c-a0e9-44c2-9601-6ded5a34a13e" x="118" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
-                <rect x="0" y="0" width="4" height="4" class="text-gray-200" fill="currentColor" />
+                <rect x="0" y="0" width="4" height="4" class="text-secondary-200" fill="currentColor" />
               </pattern>
             </defs>
-            <rect y="72" width="640" height="640" class="text-gray-50" fill="currentColor" />
+            <rect y="72" width="640" height="640" class="text-secondary-50" fill="currentColor" />
             <rect x="118" width="404" height="784" fill="url(#4f4f415c-a0e9-44c2-9601-6ded5a34a13e)" />
           </svg>
           <div class="relative mx-auto w-full rounded-lg shadow-lg lg:max-w-md">
