--- a/snippets/templates/hero_sections/hero7.html
+++ b/snippets/templates/hero_sections/hero7.html
@@ -10,7 +10,7 @@
           </a>
         </div>
         <div class="-mr-2 -my-2 md:hidden">
-          <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primary-500" aria-expanded="false">
+          <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-secondary-400 hover:text-secondary-500 hover:bg-secondary-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primary-500" aria-expanded="false">
             <span class="sr-only">Open menu</span>
             <!-- Heroicon name: outline/menu -->
             <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -20,15 +20,15 @@
         </div>
         <nav class="hidden md:flex space-x-10">
           <div class="relative">
-            <!-- Item active: "text-gray-900", Item inactive: "text-gray-500" -->
-            <button type="button" class="text-gray-500 group bg-white rounded-md inline-flex items-center text-base font-medium hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500" aria-expanded="false">
+            <!-- Item active: "text-secondary-900", Item inactive: "text-secondary-500" -->
+            <button type="button" class="text-secondary-500 group bg-white rounded-md inline-flex items-center text-base font-medium hover:text-secondary-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500" aria-expanded="false">
               <span>Solutions</span>
               <!--
                 Heroicon name: solid/chevron-down
 
-                Item active: "text-gray-600", Item inactive: "text-gray-400"
+                Item active: "text-secondary-600", Item inactive: "text-secondary-400"
               -->
-              <svg class="text-gray-400 ml-2 h-5 w-5 group-hover:text-gray-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <svg class="text-secondary-400 ml-2 h-5 w-5 group-hover:text-secondary-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                 <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
               </svg>
             </button>
@@ -46,7 +46,7 @@
             <div class="absolute z-10 -ml-4 mt-3 transform w-screen max-w-md lg:max-w-2xl lg:ml-0 lg:left-1/2 lg:-translate-x-1/2">
               <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 overflow-hidden">
                 <div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8 lg:grid-cols-2">
-                  <a href="#" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
+                  <a href="#" class="-m-3 p-3 flex items-start rounded-lg hover:bg-secondary-50">
                     <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-primary-600 text-white sm:h-12 sm:w-12">
                       <!-- Heroicon name: outline/inbox -->
                       <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -54,12 +54,12 @@
                       </svg>
                     </div>
                     <div class="ml-4">
-                      <p class="text-base font-medium text-gray-900">Inbox</p>
-                      <p class="mt-1 text-sm text-gray-500">Get a better understanding of where your traffic is coming from.</p>
+                      <p class="text-base font-medium text-secondary-900">Inbox</p>
+                      <p class="mt-1 text-sm text-secondary-500">Get a better understanding of where your traffic is coming from.</p>
                     </div>
                   </a>
 
-                  <a href="#" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
+                  <a href="#" class="-m-3 p-3 flex items-start rounded-lg hover:bg-secondary-50">
                     <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-primary-600 text-white sm:h-12 sm:w-12">
                       <!-- Heroicon name: outline/annotation -->
                       <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -67,12 +67,12 @@
                       </svg>
                     </div>
                     <div class="ml-4">
-                      <p class="text-base font-medium text-gray-900">Messaging</p>
-                      <p class="mt-1 text-sm text-gray-500">Speak directly to your customers in a more meaningful way.</p>
+                      <p class="text-base font-medium text-secondary-900">Messaging</p>
+                      <p class="mt-1 text-sm text-secondary-500">Speak directly to your customers in a more meaningful way.</p>
                     </div>
                   </a>
 
-                  <a href="#" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
+                  <a href="#" class="-m-3 p-3 flex items-start rounded-lg hover:bg-secondary-50">
                     <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-primary-600 text-white sm:h-12 sm:w-12">
                       <!-- Heroicon name: outline/chat-alt-2 -->
                       <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -80,12 +80,12 @@
                       </svg>
                     </div>
                     <div class="ml-4">
-                      <p class="text-base font-medium text-gray-900">Live Chat</p>
-                      <p class="mt-1 text-sm text-gray-500">Your customers&#039; data will be safe and secure.</p>
+                      <p class="text-base font-medium text-secondary-900">Live Chat</p>
+                      <p class="mt-1 text-sm text-secondary-500">Your customers&#039; data will be safe and secure.</p>
                     </div>
                   </a>
 
-                  <a href="#" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
+                  <a href="#" class="-m-3 p-3 flex items-start rounded-lg hover:bg-secondary-50">
                     <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-primary-600 text-white sm:h-12 sm:w-12">
                       <!-- Heroicon name: outline/question-mark-circle -->
                       <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -93,8 +93,8 @@
                       </svg>
                     </div>
                     <div class="ml-4">
-                      <p class="text-base font-medium text-gray-900">Knowledge Base</p>
-                      <p class="mt-1 text-sm text-gray-500">Connect with third-party tools that you&#039;re already using.</p>
+                      <p class="text-base font-medium text-secondary-900">Knowledge Base</p>
+                      <p class="mt-1 text-sm text-secondary-500">Connect with third-party tools that you&#039;re already using.</p>
                     </div>
                   </a>
                 </div>
@@ -102,14 +102,14 @@
             </div>
           </div>
 
-          <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-900"> Pricing </a>
+          <a href="#" class="text-base font-medium text-secondary-500 hover:text-secondary-900"> Pricing </a>
 
-          <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-900"> Partners </a>
+          <a href="#" class="text-base font-medium text-secondary-500 hover:text-secondary-900"> Partners </a>
 
-          <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-900"> Company </a>
+          <a href="#" class="text-base font-medium text-secondary-500 hover:text-secondary-900"> Company </a>
         </nav>
         <div class="hidden md:flex items-center justify-end md:flex-1 lg:w-0">
-          <a href="#" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900"> Sign in </a>
+          <a href="#" class="whitespace-nowrap text-base font-medium text-secondary-500 hover:text-secondary-900"> Sign in </a>
           <a href="#" class="ml-8 whitespace-nowrap inline-flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-primary-600 hover:bg-primary-700"> Sign up </a>
         </div>
       </div>
@@ -125,14 +125,14 @@
           To: "opacity-0 scale-95"
       -->
       <div class="absolute z-30 top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden">
-        <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-white divide-y-2 divide-gray-50">
+        <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-white divide-y-2 divide-secondary-50">
           <div class="pt-5 pb-6 px-5">
             <div class="flex items-center justify-between">
               <div>
                 <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-primary-600.svg" alt="Workflow">
               </div>
               <div class="-mr-2">
-                <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primary-500">
+                <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-secondary-400 hover:text-secondary-500 hover:bg-secondary-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primary-500">
                   <span class="sr-only">Close menu</span>
                   <!-- Heroicon name: outline/x -->
                   <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -143,61 +143,61 @@
             </div>
             <div class="mt-6">
               <nav class="grid grid-cols-1 gap-7">
-                <a href="#" class="-m-3 p-3 flex items-center rounded-lg hover:bg-gray-50">
+                <a href="#" class="-m-3 p-3 flex items-center rounded-lg hover:bg-secondary-50">
                   <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-primary-600 text-white">
                     <!-- Heroicon name: outline/inbox -->
                     <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4" />
                     </svg>
                   </div>
-                  <div class="ml-4 text-base font-medium text-gray-900">Inbox</div>
+                  <div class="ml-4 text-base font-medium text-secondary-900">Inbox</div>
                 </a>
 
-                <a href="#" class="-m-3 p-3 flex items-center rounded-lg hover:bg-gray-50">
+                <a href="#" class="-m-3 p-3 flex items-center rounded-lg hover:bg-secondary-50">
                   <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-primary-600 text-white">
                     <!-- Heroicon name: outline/annotation -->
                     <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z" />
                     </svg>
                   </div>
-                  <div class="ml-4 text-base font-medium text-gray-900">Messaging</div>
+                  <div class="ml-4 text-base font-medium text-secondary-900">Messaging</div>
                 </a>
 
-                <a href="#" class="-m-3 p-3 flex items-center rounded-lg hover:bg-gray-50">
+                <a href="#" class="-m-3 p-3 flex items-center rounded-lg hover:bg-secondary-50">
                   <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-primary-600 text-white">
                     <!-- Heroicon name: outline/chat-alt-2 -->
                     <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z" />
                     </svg>
                   </div>
-                  <div class="ml-4 text-base font-medium text-gray-900">Live Chat</div>
+                  <div class="ml-4 text-base font-medium text-secondary-900">Live Chat</div>
                 </a>
 
-                <a href="#" class="-m-3 p-3 flex items-center rounded-lg hover:bg-gray-50">
+                <a href="#" class="-m-3 p-3 flex items-center rounded-lg hover:bg-secondary-50">
                   <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-primary-600 text-white">
                     <!-- Heroicon name: outline/question-mark-circle -->
                     <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
                     </svg>
                   </div>
-                  <div class="ml-4 text-base font-medium text-gray-900">Knowledge Base</div>
+                  <div class="ml-4 text-base font-medium text-secondary-900">Knowledge Base</div>
                 </a>
               </nav>
             </div>
           </div>
           <div class="py-6 px-5">
             <div class="grid grid-cols-2 gap-4">
-              <a href="#" class="text-base font-medium text-gray-900 hover:text-gray-700"> Pricing </a>
+              <a href="#" class="text-base font-medium text-secondary-900 hover:text-secondary-700"> Pricing </a>
 
-              <a href="#" class="text-base font-medium text-gray-900 hover:text-gray-700"> Partners </a>
+              <a href="#" class="text-base font-medium text-secondary-900 hover:text-secondary-700"> Partners </a>
 
-              <a href="#" class="text-base font-medium text-gray-900 hover:text-gray-700"> Company </a>
+              <a href="#" class="text-base font-medium text-secondary-900 hover:text-secondary-700"> Company </a>
             </div>
             <div class="mt-6">
               <a href="#" class="w-full flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-primary-600 hover:bg-primary-700"> Sign up </a>
-              <p class="mt-6 text-center text-base font-medium text-gray-500">
+              <p class="mt-6 text-center text-base font-medium text-secondary-500">
                 Existing customer?
-                <a href="#" class="text-gray-900"> Sign in </a>
+                <a href="#" class="text-secondary-900"> Sign in </a>
               </p>
             </div>
           </div>
@@ -210,7 +210,7 @@
     <div>
       <!-- Hero card -->
       <div class="relative">
-        <div class="absolute inset-x-0 bottom-0 h-1/2 bg-gray-100"></div>
+        <div class="absolute inset-x-0 bottom-0 h-1/2 bg-secondary-100"></div>
         <div class="max-w-7xl mx-auto sm:px-6 lg:px-8">
           <div class="relative shadow-xl sm:rounded-2xl sm:overflow-hidden">
             <div class="absolute inset-0">
@@ -235,9 +235,9 @@
       </div>
 
       <!-- Logo cloud -->
-      <div class="bg-gray-100">
+      <div class="bg-secondary-100">
         <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8">
-          <p class="text-center text-sm font-semibold uppercase text-gray-500 tracking-wide">Trusted by over 5 very average small businesses</p>
+          <p class="text-center text-sm font-semibold uppercase text-secondary-500 tracking-wide">Trusted by over 5 very average small businesses</p>
           <div class="mt-6 grid grid-cols-2 gap-8 md:grid-cols-6 lg:grid-cols-5">
             <div class="col-span-1 flex justify-center md:col-span-2 lg:col-span-1">
               <img class="h-12" src="https://tailwindui.com/img/logos/tuple-logo-gray-400.svg" alt="Tuple">
