--- a/snippets/templates/hero_sections/hero8.html
+++ b/snippets/templates/hero_sections/hero8.html
@@ -16,7 +16,7 @@
 -->
 <div class="relative overflow-hidden">
   <header class="relative">
-    <div class="bg-gray-900 pt-6">
+    <div class="bg-secondary-900 pt-6">
       <nav class="relative max-w-7xl mx-auto flex items-center justify-between px-4 sm:px-6" aria-label="Global">
         <div class="flex items-center flex-1">
           <div class="flex items-center justify-between w-full md:w-auto">
@@ -25,7 +25,7 @@
               <img class="h-8 w-auto sm:h-10" src="https://tailwindui.com/img/logos/workflow-mark-primary-500.svg" alt="">
             </a>
             <div class="-mr-2 flex items-center md:hidden">
-              <button type="button" class="bg-gray-900 rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:bg-gray-800 focus:outline-none focus:ring-2 focus-ring-inset focus:ring-white" aria-expanded="false">
+              <button type="button" class="bg-secondary-900 rounded-md p-2 inline-flex items-center justify-center text-secondary-400 hover:bg-secondary-800 focus:outline-none focus:ring-2 focus-ring-inset focus:ring-white" aria-expanded="false">
                 <span class="sr-only">Open main menu</span>
                 <!-- Heroicon name: outline/menu -->
                 <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -35,18 +35,18 @@
             </div>
           </div>
           <div class="hidden space-x-8 md:flex md:ml-10">
-            <a href="#" class="text-base font-medium text-white hover:text-gray-300">Product</a>
+            <a href="#" class="text-base font-medium text-white hover:text-secondary-300">Product</a>
 
-            <a href="#" class="text-base font-medium text-white hover:text-gray-300">Features</a>
+            <a href="#" class="text-base font-medium text-white hover:text-secondary-300">Features</a>
 
-            <a href="#" class="text-base font-medium text-white hover:text-gray-300">Marketplace</a>
+            <a href="#" class="text-base font-medium text-white hover:text-secondary-300">Marketplace</a>
 
-            <a href="#" class="text-base font-medium text-white hover:text-gray-300">Company</a>
+            <a href="#" class="text-base font-medium text-white hover:text-secondary-300">Company</a>
           </div>
         </div>
         <div class="hidden md:flex md:items-center md:space-x-6">
-          <a href="#" class="text-base font-medium text-white hover:text-gray-300"> Log in </a>
-          <a href="#" class="inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-white bg-gray-600 hover:bg-gray-700"> Start free trial </a>
+          <a href="#" class="text-base font-medium text-white hover:text-secondary-300"> Log in </a>
+          <a href="#" class="inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-white bg-secondary-600 hover:bg-secondary-700"> Start free trial </a>
         </div>
       </nav>
     </div>
@@ -68,7 +68,7 @@
             <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-primary-600.svg" alt="">
           </div>
           <div class="-mr-2">
-            <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primary-600">
+            <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-secondary-400 hover:bg-secondary-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primary-600">
               <span class="sr-only">Close menu</span>
               <!-- Heroicon name: outline/x -->
               <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -79,19 +79,19 @@
         </div>
         <div class="pt-5 pb-6">
           <div class="px-2 space-y-1">
-            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-900 hover:bg-gray-50">Product</a>
+            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-secondary-900 hover:bg-secondary-50">Product</a>
 
-            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-900 hover:bg-gray-50">Features</a>
+            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-secondary-900 hover:bg-secondary-50">Features</a>
 
-            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-900 hover:bg-gray-50">Marketplace</a>
+            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-secondary-900 hover:bg-secondary-50">Marketplace</a>
 
-            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-900 hover:bg-gray-50">Company</a>
+            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-secondary-900 hover:bg-secondary-50">Company</a>
           </div>
           <div class="mt-6 px-5">
             <a href="#" class="block text-center w-full py-3 px-4 rounded-md shadow bg-primary-600 text-white font-medium hover:bg-primary-700">Start free trial</a>
           </div>
           <div class="mt-6 px-5">
-            <p class="text-center text-base font-medium text-gray-500">Existing customer? <a href="#" class="text-gray-900 hover:underline">Login</a></p>
+            <p class="text-center text-base font-medium text-secondary-500">Existing customer? <a href="#" class="text-secondary-900 hover:underline">Login</a></p>
           </div>
         </div>
       </div>
@@ -99,16 +99,16 @@
   </header>
 
   <main>
-    <div class="pt-10 bg-gray-900 sm:pt-16 lg:pt-8 lg:pb-14 lg:overflow-hidden">
+    <div class="pt-10 bg-secondary-900 sm:pt-16 lg:pt-8 lg:pb-14 lg:overflow-hidden">
       <div class="mx-auto max-w-7xl lg:px-8">
         <div class="lg:grid lg:grid-cols-2 lg:gap-8">
           <div class="mx-auto max-w-md px-4 sm:max-w-2xl sm:px-6 sm:text-center lg:px-0 lg:text-left lg:flex lg:items-center">
             <div class="lg:py-24">
-              <a href="#" class="inline-flex items-center text-white bg-black rounded-full p-1 pr-2 sm:text-base lg:text-sm xl:text-base hover:text-gray-200">
+              <a href="#" class="inline-flex items-center text-white bg-black rounded-full p-1 pr-2 sm:text-base lg:text-sm xl:text-base hover:text-secondary-200">
                 <span class="px-3 py-0.5 text-white text-xs font-semibold leading-5 uppercase tracking-wide bg-primary-500 rounded-full">We're hiring</span>
                 <span class="ml-4 text-sm">Visit our careers page</span>
                 <!-- Heroicon name: solid/chevron-right -->
-                <svg class="ml-2 w-5 h-5 text-gray-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <svg class="ml-2 w-5 h-5 text-secondary-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
                 </svg>
               </a>
@@ -116,19 +116,19 @@
                 <span class="block">A better way to</span>
                 <span class="block text-primary-400">ship web apps</span>
               </h1>
-              <p class="mt-3 text-base text-gray-300 sm:mt-5 sm:text-xl lg:text-lg xl:text-xl">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui Lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat.</p>
+              <p class="mt-3 text-base text-secondary-300 sm:mt-5 sm:text-xl lg:text-lg xl:text-xl">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui Lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat.</p>
               <div class="mt-10 sm:mt-12">
                 <form action="#" class="sm:max-w-xl sm:mx-auto lg:mx-0">
                   <div class="sm:flex">
                     <div class="min-w-0 flex-1">
                       <label for="email" class="sr-only">Email address</label>
-                      <input id="email" type="email" placeholder="Enter your email" class="block w-full px-4 py-3 rounded-md border-0 text-base text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-300 focus:ring-offset-gray-900">
+                      <input id="email" type="email" placeholder="Enter your email" class="block w-full px-4 py-3 rounded-md border-0 text-base text-secondary-900 placeholder-secondary-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-300 focus:ring-offset-secondary-900">
                     </div>
                     <div class="mt-3 sm:mt-0 sm:ml-3">
-                      <button type="submit" class="block w-full py-3 px-4 rounded-md shadow bg-primary-500 text-white font-medium hover:bg-primary-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-300 focus:ring-offset-gray-900">Start free trial</button>
+                      <button type="submit" class="block w-full py-3 px-4 rounded-md shadow bg-primary-500 text-white font-medium hover:bg-primary-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-300 focus:ring-offset-secondary-900">Start free trial</button>
                     </div>
                   </div>
-                  <p class="mt-3 text-sm text-gray-300 sm:mt-4">Start your free 14-day trial, no credit card necessary. By providing your email, you agree to our <a href="#" class="font-medium text-white">terms of service</a>.</p>
+                  <p class="mt-3 text-sm text-secondary-300 sm:mt-4">Start your free 14-day trial, no credit card necessary. By providing your email, you agree to our <a href="#" class="font-medium text-white">terms of service</a>.</p>
                 </form>
               </div>
             </div>
