--- a/snippets/templates/hero_sections/hero9.html
+++ b/snippets/templates/hero_sections/hero9.html
@@ -35,20 +35,20 @@
             </a>
           </div>
           <div class="mt-6 sm:max-w-xl">
-            <h1 class="text-4xl font-extrabold text-gray-900 tracking-tight sm:text-5xl">Server management for growing teams</h1>
-            <p class="mt-6 text-xl text-gray-500">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo.</p>
+            <h1 class="text-4xl font-extrabold text-secondary-900 tracking-tight sm:text-5xl">Server management for growing teams</h1>
+            <p class="mt-6 text-xl text-secondary-500">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo.</p>
           </div>
           <form action="#" class="mt-12 sm:max-w-lg sm:w-full sm:flex">
             <div class="min-w-0 flex-1">
               <label for="hero-email" class="sr-only">Email address</label>
-              <input id="hero-email" type="email" class="block w-full border border-gray-300 rounded-md px-5 py-3 text-base text-gray-900 placeholder-gray-500 shadow-sm focus:border-primary-500 focus:ring-primary-500" placeholder="Enter your email">
+              <input id="hero-email" type="email" class="block w-full border border-secondary-300 rounded-md px-5 py-3 text-base text-secondary-900 placeholder-secondary-500 shadow-sm focus:border-primary-500 focus:ring-primary-500" placeholder="Enter your email">
             </div>
             <div class="mt-4 sm:mt-0 sm:ml-3">
               <button type="submit" class="block w-full rounded-md border border-transparent px-5 py-3 bg-primary-600 text-base font-medium text-white shadow hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 sm:px-10">Notify me</button>
             </div>
           </form>
           <div class="mt-6">
-            <div class="inline-flex items-center divide-x divide-gray-300">
+            <div class="inline-flex items-center divide-x divide-secondary-300">
               <div class="flex-shrink-0 flex pr-5">
                 <!-- Heroicon name: solid/star -->
                 <svg class="h-5 w-5 text-yellow-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
@@ -71,7 +71,7 @@
                   <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
                 </svg>
               </div>
-              <div class="min-w-0 flex-1 pl-5 py-1 text-sm text-gray-500 sm:py-3"><span class="font-medium text-gray-900">Rated 5 stars</span> by over <span class="font-medium text-primary-600">500 beta users</span></div>
+              <div class="min-w-0 flex-1 pl-5 py-1 text-sm text-secondary-500 sm:py-3"><span class="font-medium text-secondary-900">Rated 5 stars</span> by over <span class="font-medium text-primary-600">500 beta users</span></div>
             </div>
           </div>
         </div>
@@ -81,11 +81,11 @@
     <div class="sm:mx-auto sm:max-w-3xl sm:px-6">
       <div class="py-12 sm:relative sm:mt-12 sm:py-16 lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
         <div class="hidden sm:block">
-          <div class="absolute inset-y-0 left-1/2 w-screen bg-gray-50 rounded-l-3xl lg:left-80 lg:right-0 lg:w-full"></div>
+          <div class="absolute inset-y-0 left-1/2 w-screen bg-secondary-50 rounded-l-3xl lg:left-80 lg:right-0 lg:w-full"></div>
           <svg class="absolute top-8 right-1/2 -mr-3 lg:m-0 lg:left-0" width="404" height="392" fill="none" viewBox="0 0 404 392">
             <defs>
               <pattern id="837c3e70-6c3a-44e6-8854-cc48c737b659" x="0" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
-                <rect x="0" y="0" width="4" height="4" class="text-gray-200" fill="currentColor" />
+                <rect x="0" y="0" width="4" height="4" class="text-secondary-200" fill="currentColor" />
               </pattern>
             </defs>
             <rect width="404" height="392" fill="url(#837c3e70-6c3a-44e6-8854-cc48c737b659)" />
