adding post in crud app

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         {% block title %}
-            <title>Django Tailwind</title>
+            <title>Project Name</title>
         {% endblock %}
 
         {% block meta_tags %}
