--- a/crud/templates/home.html
+++ b/crud/templates/home.html
@@ -1,5 +1,5 @@
 <!-- templates/home.html -->
-{% extends "base_crud.html" %}
+{% extends "base.html" %}
 
 {% block content %}
     {% for post in post_list %}
