--- a/crud/templates/base_crud.html
+++ b/crud/templates/base_crud.html
@@ -7,7 +7,7 @@
         <title>Django blog</title>
     </head>
     <body>
-        <header>
+        <header class='postList'>
             <h1><a href="{% url 'home' %}">Django blog</a></h1>
         </header>
         <div>
