--- a/crud/templates/post_detail.html
+++ b/crud/templates/post_detail.html
@@ -32,7 +32,8 @@
                             <dt class="text-sm font-medium text-gray-500">Post</dt>
                             <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">{{ object.body }}</dd>
                         </div>
-                        <div class="py-4 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+
+                        {% comment %} <div class="py-4 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
                             <dt class="text-sm font-medium text-gray-500">Attachments</dt>
                             <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
                                 <ul role="list" class="border border-gray-200 rounded-md divide-y divide-gray-200">
@@ -62,7 +63,7 @@
                                     </li>
                                 </ul>
                             </dd>
-                        </div>
+                        </div> {% endcomment %}
                     </dl>
                 </div>
             </div>
