--- a/crud/templates/home.html
+++ b/crud/templates/home.html
@@ -9,13 +9,11 @@
             <h2 class='text-center font-semibold text-xl py-6' >Blog List </h2>
 
             <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
-                <form class="form-inline ml-8 mt-2 mt-md-0" action="{% url 'home' %}" method="get">
-
-                    <input name="q" class="form-control mr-sm-2 rounded" type="text" placeholder="Search" aria-label="Search">
-                    <button type="submit" class="border-2 border-gray-200 hover:border-gray-300 shadow-md py-1 px-4 rounded">Search</button>
-                </form>
 
                 <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
+                    <form class="p-1 flex justify-end" action="{% url 'search_results' %}" method="get">
+                        <input name="q" class="form-inline mt-2 mt-md-0 rounded-md" type="text" placeholder="Search" aria-label="Search">
+                    </form>
                     <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
 
                         <table id="dataTable" class="min-w-full divide-y divide-gray-200">
@@ -26,12 +24,12 @@
                                     <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Updated Date</th>
                                     <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Body</th>
                                     <th scope="col" class="relative px-6 py-3">
-                                        <span class="sr-only">Edit</span>
+                                        <span class="sr-only ">Edit</span>
+                                        <span class="sr-only">Delete</span>
                                     </th>
                                 </tr>
                             </thead>
                             {% include 'search_results.html' %}
-
                         </table>
                     </div>
                 </div>
