--- a/snippets/templates/user/edit_user.html
+++ b/snippets/templates/user/edit_user.html
@@ -11,7 +11,7 @@
                         <div class="space-y-8 divide-y divide-gray-200">
                             <div>
                                 <div>
-                                    <h3 class="text-lg leading-6 font-medium text-gray-900">Profile</h3>
+                                    <h3 class="text-lg leading-6 font-medium text-gray-900">Profile edit</h3>
                                     <p class="mt-1 text-sm text-gray-500">This information will be displayed publicly so be careful what you share.</p>
                                 </div>
 
