before starting pagination

--- a/snippets/templates/user/user_list.html
+++ b/snippets/templates/user/user_list.html
@@ -4,11 +4,12 @@
 {% block content %}
 
     <div class="nav-right">
+
         <button  class="m-4 px-2 py-1 bg-green-100 hover:bg-green-200 shadow-lg rounded-md  ">
             <a href="{% url 'user_add' %}">+ New user</a>
         </button>
     </div>
-    <div class="flex flex-col">
+    <div class="flex flex-col p-4">
         <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
             <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
                 <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
