--- a/crud/templates/home.html
+++ b/crud/templates/home.html
@@ -4,28 +4,49 @@
 {% block content %}
 
     <!-- This example requires Tailwind CSS v2.0+ -->
-    <div class="container mx-auto">
-        <div class="p-4 flex flex-col justify-center">
-            <h2 class='text-center font-semibold text-xl py-6' >Blog List </h2>
+    <div class="px-0 sm:px-2" id="crud">
+        <div class="p-1 sm:p-2 sm:flex sm:flex-col sm:justify-center">
+            <div class="flex justify-reverse flex-wrap sm:flex sm:items-center px-2 md:px-0 py-6 sm:py-4">
+                <div class="sm:flex-auto ml-2">
+                    <h1 class="text-xl font-semibold text-gray-900">Users</h1>
+                    <p class="mt-2 text-sm text-gray-700">A list of all the users in your account including their name, title, email and role.</p>
+                </div>
+                <div class="flex justify-end items-center mt-4">
+                    <!--SEARCH BAR-->
+                    <form action="{% url 'search_results' %}" method="get">
+                        <div class="relative ...">
+                            <div class="pointer-events-auto absolute inset-y-0 right-0 pr-2 flex items-center ...">
+                                <svg class="flex-shrink-0 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
+                                </svg>
+                            </div>
+                            <input id="search" name="q" aria-label="Search" type="text" placeholder="Search"
+                                class="block rounded text-sm p-2 border border-transparent focus:outline-none focus:bg-white focus:ring-white focus:border-white focus:placeholder-secondary-500 ...">
+                        </div>
+                    </form>
+                    <!--ADD POST-->
+                    <div class="sm:mt-0 sm:ml-8 sm:flex-none ">
+                        <button type="button" class="inline-flex justify-center rounded-md border border-transparent bg-indigo-600 px-4 ml-2 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto">Add Post</button>
+                    </div>
+                </div>
+            </div>
 
             <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
 
                 <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
-                    <form class="p-1 flex justify-end" action="{% url 'search_results' %}" method="get">
-                        <input name="q" class="form-inline mt-2 mt-md-0 rounded-md" type="text" placeholder="Search" aria-label="Search">
-                    </form>
                     <div class="shadow overflow-hidden border-b border-secondary-200 sm:rounded-lg">
 
                         <table id="dataTable" class="min-w-full divide-y divide-secondary-200">
                             <thead class="bg-secondary-100">
                                 <tr>
+                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-secondary-500 uppercase tracking-wider">Author</th>
                                     <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-secondary-500 uppercase tracking-wider">Title</th>
-                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-secondary-500 uppercase tracking-wider">Created Date</th>
-                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-secondary-500 uppercase tracking-wider">Updated Date</th>
-                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-secondary-500 uppercase tracking-wider">Body</th>
+                                    <th scope="col" class="hidden px-6 py-3 text-left text-xs font-medium text-secondary-500 uppercase tracking-wider lg:table-cell">Created Date</th>
+                                    <th scope="col" class="hidden px-6 py-3 text-left text-xs font-medium text-secondary-500 uppercase tracking-wider sm:table-cell">Body</th>
                                     <th scope="col" class="relative px-6 py-3">
                                         <span class="sr-only ">Edit</span>
                                         <span class="sr-only">Delete</span>
+                                        <span class="sr-only">Veiw</span>
                                     </th>
                                 </tr>
                             </thead>
@@ -36,5 +57,4 @@
             </div>
         </div>
     </div>
-
 {% endblock content %}
