--- a/crud/templates/post_delete.html
+++ b/crud/templates/post_delete.html
@@ -4,11 +4,17 @@
 {% block content %}
     <div class= "container mx-auto">
         <div class="flex justify-center ">
-            <div class="w-1/3 shadow-lg p-6 rounded-md mt-8">
+            <div class="w-1/3 shadow-lg p-6 rounded-md mt-8 bg-white">
                 <h1 class='font-semibold'>Delete post</h1>
                 <form action="" method="post">{% csrf_token %}
                     <p>Are you sure you want to delete "{{ post.title }}"?</p>
-                    <input type="submit" value="Confirm" class="px-2 py-1 hover:text-primary-700 hover:cursor-pointer before:rounded-lg">
+                    <div class="flex justify-end pt-2">
+                        <a href="{% url 'home' %}"><button type="button" class="bg-white py-2 px-4 border border-secondary-300 rounded-md shadow-sm text-sm font-medium text-secondary-700 hover:bg-secondary-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">
+                            Cancel
+                        </button></a>
+                        <button type="submit" class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-primary-600 hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">
+                            Confirm</button>
+                    </div>
                 </form>
             </div>
         </div>
