--- a/crud/templates/post_detail.html
+++ b/crud/templates/post_detail.html
@@ -29,7 +29,7 @@
                             <dd class="mt-1 text-sm text-secondary-900 sm:mt-0 sm:col-span-2">{{ object.last_updated }}</dd>
                         </div>
                         <div class="py-4 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                            <dt class="text-sm font-medium text-secondary-500">Post</dt>
+                            <dt class="text-sm font-medium text-secondary-500">Body</dt>
                             <dd class="mt-1 text-sm text-secondary-900 sm:mt-0 sm:col-span-2">{{ object.body }}</dd>
                         </div>
 
