--- a/crud/templates/post_edit.html
+++ b/crud/templates/post_edit.html
@@ -36,8 +36,8 @@
                                     <div class="sm:col-span-6">
                                         <label for="{{ form.body.id_for_label }}" class="block text-sm font-medium text-secondary-700"> {{form.body.label}} </label>
                                         <div class="mt-1">
-                                            <textarea id="{{ form.body.id_for_label }}" name="{{ form.body.name }}" rows="5" value="{{ form.body.value }}"
-                                                class="shadow-sm text-secondary-500 focus:ring-primary-500 focus:border-primary-500 block w-full sm:text-md border border-secondary-300 rounded-md" >
+                                            <textarea type="text" id="{{ form.body.id_for_label }}" name="{{ form.body.name }}" rows="5" value="{{ form.body.value }}"
+                                                class="p-2 shadow-sm focus:ring-primary-500 focus:border-primary-500 block w-full sm:text-md border border-secondary-300 rounded-md" >
                                             </textarea>
                                         </div>
                                         <p class="mt-2 text-sm text-secondary-500">Edit your post content.</p>
@@ -49,7 +49,10 @@
                                 </div>
                                 <div class="pt-5">
                                     <div class="flex justify-end">
-                                        <button type="reset" class="bg-white py-2 px-4 border border-secondary-300 rounded-md shadow-sm text-sm font-medium text-secondary-700 hover:bg-secondary-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">Cancel</button>
+                                        <a href="{% url 'home' %}">
+                                            <button type="button" class="bg-white py-2 px-4 border border-secondary-300 rounded-md shadow-sm text-sm font-medium text-secondary-700 hover:bg-secondary-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">
+                                                Cancel
+                                            </button></a>
                                         <button type="submit" class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-primary-600 hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">Save</button>
                                     </div>
                                 </div>
@@ -60,4 +63,6 @@
             </div>
         </div>
     </div>
+
+
 {% endblock content %}
