--- a/crud/templates/search_results.html
+++ b/crud/templates/search_results.html
@@ -4,18 +4,19 @@
         <tr class="hover:bg-indigo-100">
             <td class="px-6 py-2 whitespace-nowrap">
                 <div class="text-sm font-medium text-secondary-900">
-                    <a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a>
+                    <a href="{% url 'post_detail' post.pk %}">{{ post.author }}</a>
                 </div>
             </td>
             <td class="px-6 py-2 whitespace-nowrap">
-                <div class="text-sm text-secondary-900">{{ post.author }}</div>
+                <div class="text-sm text-secondary-900">{{ post.title }}</div>
             </td>
-            <td class="px-6 py-2 whitespace-nowrap">
-                <div class="text-sm text-secondary-500">{{ post.last_updated }}</div> </td>
-            <td class="px-6 py-2 whitespace-nowrap text-sm text-secondary-500">{{ post.body }}</td>
+            <td class="hidden px-6 py-2 whitespace-nowrap sm:table-cell">
+                <div class="text-sm text-secondary-500">{{ post.created }}</div> </td>
+            <td class="hidden px-6 py-2 whitespace-nowrap text-sm text-secondary-500 lg:table-cell">{{ post.body }}</td>
             <td class="px-6 py-2 whitespace-nowrap text-right text-sm font-medium">
                 <a href="{% url 'post_edit' post.pk %}" class="text-indigo-600 hover:text-indigo-900 pr-2">Edit</a>
-                <a href="{% url 'post_delete' post.pk %}" class="text-indigo-600 hover:text-indigo-900">Delete</a>
+                <a href="{% url 'post_delete' post.pk %}" class="text-indigo-600 hover:text-indigo-900 pr-2 ">Delete</a>
+                <a href="{% url 'post_detail' post.pk %}" class="text-indigo-600 hover:text-indigo-900">View</a>
             </td>
         </tr>
     {% endfor %}
