--- a/crud/templates/post_detail.html
+++ b/crud/templates/post_detail.html
@@ -12,10 +12,10 @@
                 </div>
                 <div class="border-t border-secondary-200 px-4 py-5 sm:p-0">
                     <dl class="sm:divide-y sm:divide-secondary-200">
-                        <div class="py-4 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                            <dt class="text-sm font-medium text-secondary-500">Author name</dt>
-                            <dd class="mt-1 text-sm text-secondary-900 sm:mt-0 sm:col-span-2">{{ object.author }}</dd>
-                        </div>
+                        {#                        <div class="py-4 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">#}
+                        {#                            <dt class="text-sm font-medium text-secondary-500">Author name</dt>#}
+                        {#                            <dd class="mt-1 text-sm text-secondary-900 sm:mt-0 sm:col-span-2">{{ object.author }}</dd>#}
+                        {#                        </div>#}
                         <div class="py-4 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
                             <dt class="text-sm font-medium text-secondary-500">Title</dt>
                             <dd class="mt-1 text-sm text-secondary-900 sm:mt-0 sm:col-span-2">{{ object.title }}</dd>
