--- a/crud/templates/home.html
+++ b/crud/templates/home.html
@@ -16,9 +16,11 @@
                     <form action="{% url 'search_results' %}" method="get">
                         <div class="relative ...">
                             <div class="pointer-events-auto absolute inset-y-0 right-0 pr-2 flex items-center ...">
-                                <svg class="flex-shrink-0 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                    <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
-                                </svg>
+                                <button type="submit" value="Submit">
+                                    <svg  class="flex-shrink-0 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
+                                    </svg>
+                                </button>
                             </div>
                             <input id="search" name="q" aria-label="Search" type="text" placeholder="Search"
                                 class="block rounded text-sm p-2 border border-transparent focus:outline-none focus:bg-white focus:ring-white focus:border-white focus:placeholder-secondary-500 ...">
@@ -39,7 +41,7 @@
                         <table id="dataTable" class="min-w-full divide-y divide-secondary-200">
                             <thead class="bg-secondary-100">
                                 <tr>
-                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-secondary-500 uppercase tracking-wider">Author</th>
+                                    {#                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-secondary-500 uppercase tracking-wider">Author</th>#}
                                     <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-secondary-500 uppercase tracking-wider">Title</th>
                                     <th scope="col" class="hidden px-6 py-3 text-left text-xs font-medium text-secondary-500 uppercase tracking-wider lg:table-cell">Created Date</th>
                                     <th scope="col" class="hidden px-6 py-3 text-left text-xs font-medium text-secondary-500 uppercase tracking-wider sm:table-cell">Body</th>
