--- a/crud/templates/home.html
+++ b/crud/templates/home.html
@@ -3,7 +3,6 @@
 
 {% block content %}
 
-    <!-- This example requires Tailwind CSS v2.0+ -->
     <div class="px-0 sm:px-2" id="crud">
         <div class="p-1 sm:p-2 sm:flex sm:flex-col sm:justify-center">
             <div class="flex justify-reverse flex-wrap sm:flex sm:items-center px-2 md:px-0 py-6 sm:py-4">
@@ -12,20 +11,7 @@
                     <p class="mt-2 text-sm text-gray-700">A list of all the posts including main characteristics.</p>
                 </div>
                 <div class="flex justify-end items-center mt-4">
-                    <!--SEARCH BAR-->
-                    <form action="{% url 'search_results' %}" method="get">
-                        <div class="relative ...">
-                            <div class="pointer-events-auto absolute inset-y-0 right-0 pr-2 flex items-center ...">
-                                <button type="submit" value="Submit">
-                                    <svg  class="flex-shrink-0 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
-                                    </svg>
-                                </button>
-                            </div>
-                            <input id="search" name="q" aria-label="Search" type="text" placeholder="Search"
-                                class="block rounded text-sm p-2 border border-transparent focus:outline-none focus:bg-white focus:ring-white focus:border-white focus:placeholder-secondary-500 ...">
-                        </div>
-                    </form>
+                    {% include 'search_bar.html' %}
                     <!--ADD POST-->
                     <div class="sm:mt-0 sm:ml-8 sm:flex-none ">
                         <a href="{% url 'post_create' %}"> <button type="button" class="inline-flex justify-center rounded-md border border-transparent bg-primary-600 px-4 ml-2 py-2 text-sm font-medium text-white shadow-sm hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 sm:w-auto">Add Post</button></a>
@@ -33,127 +19,7 @@
                 </div>
             </div>
 
-            <!-- This example requires Tailwind CSS v2.0+ -->
-            <div class="px-4 sm:px-6 lg:px-8">
-                <div class="mt-8 flex flex-col">
-                    <div class="-my-2 -mx-4 sm:-mx-6 lg:-mx-8">
-                        <div class="inline-block min-w-full py-2 align-middle">
-                            <div class="shadow-sm ring-1 ring-black ring-opacity-5">
-                                <table class="min-w-full border-separate" style="border-spacing: 0">
-                                    <thead class="bg-gray-50">
-                                        <tr>
-                                            <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-gray-50 bg-opacity-75 py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter sm:pl-6 lg:pl-8">Id</th>
-                                            <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-gray-50 bg-opacity-75 py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter sm:pl-6 lg:pl-8">Title</th>
-                                            <th scope="col" class="sticky top-0 z-10 hidden border-b border-gray-300 bg-gray-50 bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter sm:table-cell">Created Date</th>
-                                            <th scope="col" class="sticky top-0 z-10 hidden border-b border-gray-300 bg-gray-50 bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter lg:table-cell">Body</th>
-                                            <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-gray-50 bg-opacity-75 py-3.5 pr-4 pl-3 backdrop-blur backdrop-filter sm:pr-6 lg:pr-8">
-                                                <span class="sr-only">Edit</span>
-                                                <span class="sr-only">Delete</span>
-                                                <span class="sr-only">View</span>
-                                            </th>
-                                        </tr>
-                                    </thead>
-                                    {% include 'search_results.html' %}
-                                    <!-- More people... -->
-                                </tbody>
-                            </table>
-
-                            {% if not is_paginated %}
-                                <div class="hidden sm:flex-1 sm:flex sm:items-center sm:justify-between">
-
-                                    <div>
-                                        <p class="text-sm text-gray-700">
-                                            <span class="font-medium">{{ page_obj.paginator.count }}</span>
-                                            total records
-                                        </p>
-                                    </div>
-                                </div>
-
-                                <!-- PAGINATOR -->
-                            {% else %}
-                                <!-- This example requires Tailwind CSS v2.0+ -->
-                                <div class="pagination bg-white px-4 py-3 flex items-center justify-between border-t border-gray-200 sm:px-6">
-                                    <div class="flex-1 flex justify-between sm:hidden">
-                                        {% if page_obj.has_previous %}
-                                            <a href="?page={{ page_obj.previous_page_number }}&q={{ query }}" class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50"> Previous </a>
-                                        {% endif %}
-                                        {% if page_obj.has_next %}
-                                            <a href="?page={{ page_obj.next_page_number }}&q={{ query }}" class="ml-3 relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50"> Next </a>
-                                        {% endif %}
-                                    </div>
-
-                                    <div class="hidden sm:flex-1 sm:flex sm:items-center sm:justify-between">
-
-                                        <div>
-                                            <p class="text-sm text-gray-700">
-                                                Page
-                                                <span class="font-medium">{{ page_obj.number }}</span>
-                                                of
-                                                <span class="font-medium">{{ page_obj.paginator.num_pages }}.</span>
-                                                <span class="font-medium">{{ page_obj.paginator.count }}</span>
-                                                total records
-                                            </p>
-                                        </div>
-                                        <div>
-                                            <nav class="relative z-0 inline-flex rounded-md shadow-sm -space-x-px" aria-label="Pagination">
-
-                                                {% if page_obj.has_previous %}
-                                                    <a href="?page=1&q={{ query }}" class="relative inline-flex items-center px-2 py-2 rounded-l-md border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
-                                                        <span class="sr-only">Previous</span>
-                                                        <!-- Heroicon name: solid/chevron-double-left -->
-                                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                                                            <path fill-rule="evenodd" d="M15.707 15.707a1 1 0 01-1.414 0l-5-5a1 1 0 010-1.414l5-5a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 010 1.414zm-6 0a1 1 0 01-1.414 0l-5-5a1 1 0 010-1.414l5-5a1 1 0 011.414 1.414L5.414 10l4.293 4.293a1 1 0 010 1.414z" clip-rule="evenodd" />
-                                                        </svg>
-                                                    </a>
-                                                    <a href="?page={{ page_obj.previous_page_number }}&q={{ query }}" class="relative inline-flex items-center px-2 py-2 rounded-l-md border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
-                                                        <span class="sr-only">Previous</span>
-                                                        <!-- Heroicon name: solid/chevron-left -->
-                                                        <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                                            <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
-                                                        </svg>
-                                                    </a>
-                                                {% endif %}
-                                                {% if page_obj.paginator.num_pages <= 10 %}
-                                                    {% for i in paginator.page_range %}
-                                                        {% if page_obj.number == i %}
-                                                            <a href="#" aria-current="page" class="z-10 bg-primary-50 border-primary-500 text-primary-600 relative inline-flex items-center px-4 py-2 border text-sm font-medium">{{ i }}</a>
-                                                        {% else %}
-                                                            <a href="?page={{ i }}&q={{ query }}" class="bg-white border-secondary-300 text-secondary-500 hover:bg-secondary-50 hidden md:inline-flex relative items-center px-4 py-2 border text-sm font-medium"> {{ i }} </a>
-                                                        {% endif %}
-                                                    {% endfor %}
-                                                {% endif %}
-                                                {% if page_obj.has_next %}
-                                                    <a href="?page={{ page_obj.next_page_number }}&q={{ query }}" class="relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
-                                                        <span class="sr-only">Next</span>
-                                                        <!-- Heroicon name: solid/chevron-right -->
-                                                        <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                                            <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
-                                                        </svg>
-                                                    </a>
-                                                    <a href="?page={{ page_obj.paginator.num_pages }}&q={{ query }}" class="relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
-                                                        <span class="sr-only">Next</span>
-                                                        <!-- Heroicon name: solid/chevron-right -->
-                                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                                                            <path fill-rule="evenodd" d="M10.293 15.707a1 1 0 010-1.414L14.586 10l-4.293-4.293a1 1 0 111.414-1.414l5 5a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0z" clip-rule="evenodd" />
-                                                            <path fill-rule="evenodd" d="M4.293 15.707a1 1 0 010-1.414L8.586 10 4.293 5.707a1 1 0 011.414-1.414l5 5a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0z" clip-rule="evenodd" />
-                                                        </svg>
-                                                    </a>
-
-                                                {% endif %}
-
-                                            </nav>
-                                        </div>
-                                    </div>
-                                </div>
-                            {% endif %}
-
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {% include 'table_search_pagination.html' %}
         </div>
-
-
-    </div>
     </div>
 {% endblock content %}
